Added styled header with deakin logo

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>SIT223-SIT753 - Professional Practice in IT</h1>
+<div class="header">
+
+    <img src="logo.svg" alt="Deakin Logo" width="200" height="210">
+   
+   </div>
 </body>
 </html>
