--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title> Home </title>
 <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
 </head>
+<footer>
+    <p>Developed by Team Innovators – SIT753 2025</p>
+  </footer>  
 <body>
 <h1>SIT223-SIT753 - Professional Practice in IT</h1>
 <h3>Content</h3>
