--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
 </head>
 <body>
 <h1>SIT223-SIT753 - Professional Practice in IT</h1>
+<h3>Content</h3>
+
+<p>
+
+ To be successful IT graduates need to understand the use of industry tools and practices,
+
+ and how these connect with teamwork, ethics, and professionalism.
+
+</p>
+
+<a href="https://www.deakin.edu.au/students/enrolment-and-fees/fees">> Current students</a>
+
+<h2>Unit Details</h2>
+
+<table>
+
+ <tr><td>Year:</td><td>2023 unit information</td></tr>
+
+ <tr><td>Enrolment modes:</td><td>Trimester 1: Burwood, Cloud</td></tr>
+
+ <tr><td>Credit point(s):</td><td>1</td></tr>
+
+ <tr><td>Unit Chair:</td><td>Azadeh Ghari Neiat</td></tr>
+
+</table>
 <div class="header">
 
     <img src="logo.svg" alt="Deakin Logo" width="200" height="210">
